<resources>
    <string name="app_name">Screen Shift</string>

    <string name="hello_world">Hello world!</string>
    <string name="stub_message">Temporary stub. Options and settings will come here.</string>
    <string name="heading_resolution">Resolution</string>
    <string name="heading_overscan">Overscan %</string>
    <string name="heading_density">Density</string>
    <string name="title_activity_options">Options</string>
    <string name="key_set_on_boot">set_on_boot</string>
    <string name="key_show_notification">show_notification</string>
    <string name="key_display_mode_in_call">in_call_list</string>
    <string name="title_activity_general_settings">More Settings</string>
    <string name="title_activity_product_tour">Product Tour</string>

    <string name="welcom_head_01">Customize your display</string>
    <string name="welcom_content_01">Change your display resolution, density, and overscan.</string>
    <string name="welcom_head_02">Improve gaming and app testing</string>
    <string name="welcom_content_02">Test apps in multiple resolutions using a single device. Play games at lower resolution to improve performance.</string>
    <string name="welcom_head_03">In case anything goes wrong</string>
    <string name="welcom_content_03">If you can\'t restore normal display, reboot your device, wait for 2 minutes, and reboot it again.
        If that fails, issue these commands using adb: am display-size reset &amp;&amp; am display-density reset</string>
    <string name="title_activity_about">About</string>

    <string name="action_about">About</string>
    <string name="action_view_intro">View intro</string>
    <string name="about_head_01">Screen Shift</string>
    <string name="about_content_01">By Aravind Sagar</string>
    <string name="action_share">Share this app</string>
    <string name="send_to">Spread the love!</string>
    <string name="visit_website">Visit Website</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="more_settings">More Settings…</string>
    <string name="density_value_string">Density value</string>
    <string name="string_skip">SKIP</string>
    <string name="string_done">DONE</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="keep_settings_question">Do you want to keep the current display settings?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="continue_string">Continue</string>
    <string name="cancel_string">Cancel</string>
    <string name="settings_saved_string">Settings saved</string>
    <string name="enter_valid_input">Please enter valid inputs</string>
    <string name="enter_valid_resolution">Enter valid resolution values</string>
    <string name="enter_valid_density">Enter valid density value</string>
    <string name="resolution_warning_string">Resolution might make the display unusable. Are you sure you want to continue? Wait for 15 seconds if display is unusable.</string>
    <string name="overscan_warning_string">Overscan might make the display unusable. Are you sure you want to continue? Wait for 15 seconds if display is unusable.</string>
    <string name="share_string">Screen Shift: Customize your display. More details at</string>
    <string name="touch_to_toggle">Touch to toggle</string>
    <string name="custom_display">Display in custom mode</string>
    <string name="no_root_string">Couldn\'t acquire root permissions</string>
    <string name="default_display">Display in default mode</string>
    <string name="density_reboot_test_title">Please note</string>
    <string name="density_reboot_test_message">Changing density can trigger reboot in certain devices. Click OK to test this behavior. If your device rebooted when you clicked Ok, or you do not want to test it now, click Cancel. You can reset this in Settings.</string>
    <string name="density_no_reboot_toast">Changing density does not trigger reboot. Yaay!</string>
    <string name="trigger_reboot_warning_message">This could trigger a reboot. Do you want to continue?</string>
    <string name="warning">Warning</string>
    <string name="density_reboot_test_option">Test reboot on density change</string>
    <string name="action_donate">Donate</string>
    <string name="donate_failed_message">Donate failed. Please try again.</string>
    <string name="prev_in_progress_try_later">Previous purchase is still being processed, please try after a few seconds.</string>
    <string name="title_activity_profiles">Per-App Profiles</string>
    <string name="action_settings">Settings</string>
    <string name="action_per_app_profiles">Per-app profiles</string>
    <string name="text_default">Default</string>
    <string name="info_per_app_profiles">Please test the profiles by applying them, before assigning them to apps. Failure to do so might make your display unusable!\n\nSet different display profiles for apps here. Resolution will change automatically when that app is opened.\n\'Default\' profile will contain values that was last applied in the main settings page.</string>
    <string name="got_it">Got it</string>
    <string name="action_quick_help">Quick Help</string>
    <string name="about_header">Screen Shift v%s</string>
    <string name="message_enable_usage_access">In order for Screen Shift to identify the currently running app, it should be granted Usage Access Permission. Click Ok to go to Security settings, select \'Apps with usage access\' and enable Screen Shift there. After that please press back to return to Screen Shift.</string>
    <string name="message_enable_usage_access_for_per_app_profiles">Please enable usage access to use per-app profiles.</string>
    <string name="heading_enable_usage_access">Please enable usage access</string>
</resources>
