<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sagar.screenshift2.AboutActivity">
    <item android:id="@+id/action_app_profiles" android:title="@string/action_per_app_profiles"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_intro" android:title="@string/action_view_intro"
        android:orderInCategory="110" app:showAsAction="never" />
    <item android:id="@+id/action_donate" android:title="@string/action_donate"
        android:orderInCategory="120" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="130" app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="140" app:showAsAction="never" />

</menu>
