<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_theme"
        android:layout_alignParentTop="true">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_cards"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_theme_light">
                <Button
                    android:id="@+id/button_load_profile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Load profile"
                    android:layout_height="wrap_content"
                    style="@style/ButtonBarButton"/>
                <Button
                    android:id="@+id/button_save_profile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="Save profile"
                    style="@style/ButtonBarButton"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/card_view_resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_resolution"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/heading_resolution"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/activity_vertical_margin"/>
                    <LinearLayout
                        android:id="@+id/linear_layout_resolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/switch_resolution"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin">
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Width"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:id="@+id/edit_text_width"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_vertical_margin"
                            android:paddingRight="@dimen/activity_vertical_margin"
                            android:text="X"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Height"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:inputType="number"
                            android:id="@+id/edit_text_height" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/card_view_overscan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_overscan"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/heading_overscan"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/activity_vertical_margin"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/switch_overscan"
                        android:id="@+id/linear_layout_overscan_left">
                        <ImageView
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="@dimen/overscan_icon_size"
                            android:src="@drawable/ic_overscan_left"
                            android:id="@+id/icon_overscan_left"/>
                        <SeekBar
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/seekbar_margin"
                            android:layout_marginRight="@dimen/seekbar_margin"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/seek_bar_left"/>
                        <TextView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:id="@+id/text_overscan_left"
                            android:layout_gravity="center_vertical"
                            android:textAlignment="center"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_overscan_left"
                        android:id="@+id/linear_layout_overscan_top"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="@dimen/overscan_icon_size"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:src="@drawable/ic_overscan_top"
                            android:id="@+id/icon_overscan_top"/>
                        <SeekBar
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/seekbar_margin"
                            android:layout_marginRight="@dimen/seekbar_margin"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/seek_bar_top"/>
                        <TextView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:id="@+id/text_overscan_top"
                            android:textAlignment="center"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_overscan_top"
                        android:id="@+id/linear_layout_overscan_right"
                        android:gravity="center_vertical">
                        <ImageView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="@dimen/overscan_icon_size"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:src="@drawable/ic_overscan_right"
                            android:id="@+id/icon_overscan_right"/>
                        <SeekBar
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/seekbar_margin"
                            android:layout_marginRight="@dimen/seekbar_margin"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/seek_bar_right"/>
                        <TextView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:id="@+id/text_overscan_right"
                            android:textAlignment="center"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_overscan_right"
                        android:id="@+id/linear_layout_overscan_bottom"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="@dimen/activity_vertical_margin">
                        <ImageView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="@dimen/overscan_icon_size"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_vertical_margin"
                            android:src="@drawable/ic_overscan_bottom"
                            android:id="@+id/icon_overscan_bottom"/>
                        <SeekBar
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/seekbar_margin"
                            android:layout_marginRight="@dimen/seekbar_margin"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/seek_bar_bottom"/>
                        <TextView
                            android:layout_width="@dimen/overscan_icon_size"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/activity_vertical_margin"
                            android:id="@+id/text_overscan_bottom"
                            android:textAlignment="center"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/card_view_density"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_density"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/heading_density"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/activity_vertical_margin"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/switch_density"
                        android:hint="Density value"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:inputType="number"
                        android:id="@+id/edit_text_density"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/card_view_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@drawable/custom_bg"
                android:background="@android:color/white"
                card_view:cardCornerRadius="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/morecard_margin"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/button_more_settings"
                    android:text="More Settings..."/>
            </android.support.v7.widget.CardView>
            <View
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:background="@android:color/transparent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_background"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:elevation="4dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp"
        android:focusable="false"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:elevation="4dp"
        android:src="@drawable/ic_done_white_48dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp" />

</RelativeLayout>
